Update link to unitless values

--- a/website/app/[locale]/(root)/docs/spacing-and-sizing/content.mdx
+++ b/website/app/[locale]/(root)/docs/spacing-and-sizing/content.mdx
@@ -70,4 +70,4 @@ export default {
     }
 }
 ```
-It can be confused with the [unitless values](/docs/style-declarations#unit-value-conversion).
+It can be confused with the [unitless values](/docs/style-declarations##unit-sensing).
