Docs: Use default colors

--- a/website/app/[locale]/(root)/docs/colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/colors/content.mdx
@@ -3,6 +3,15 @@
 
 ---
 
+## Basic usage
+### Use default colors
+The official default color palette is [Master Colors](https://github.com/master-co/colors). Each color comes with a hue scale ranging from `5` to `95`, which you can directly apply through the related syntax:
+```html
+<div class="**bg:blue-60** **fg:red-70**">…</div>
+```
+
+---
+
 ## Customization
 ### Add a color
 Add color variables using `#000`, `rgb(0 0 0)`, or `hsl(0 0% 0%)`.
