--- a/website/app/[locale]/(root)/docs/migration/styled-components/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/styled-components/content.mdx
@@ -2,7 +2,7 @@
 
 ```jsx name=App.jsx
 -import styled, { css } from 'styled-components'
-+import { styled } from '@master/css.react'
++import styled from '@master/styled.react'
 
 -const Button = styled.a`
 -    display: inline-block;
