Add Svelte Playwright integration and fix Fragment prop issue

--- a/website/app/[locale]/(root)/docs/installation/svelte/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/content.mdx
@@ -112,7 +112,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
             +    let CSSRuntimeProvider: ComponentType<CSSProviderType> = Fragment as any;
 
             +    onMount(async () => {
-            +        CSSRuntimeProvider = (await import("@master/css.svelte")).CSSRuntimeProvider;
+            +        CSSRuntimeProvider = (await import("@master/css.svelte")).default;
             +    });
             </script>
 
