Update CSSRuntimeProvider imports

--- a/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
@@ -101,7 +101,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
                         lang: 'tsx',
                         code: `
                             import './globals.css'
-                            +import { CSSRuntimeProvider } from '@master/css.react'
+                            +import CSSRuntimeProvider from '@master/css.react'
                             +import config from '../master.css'
 
                             export const metadata = {
