--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
@@ -77,7 +77,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         <StepR>
             ```html name=app.vue
             <script setup lang="ts">
-            +import { CSSRuntimeProvider } from '@master/css.vue'
+            +import CSSRuntimeProvider from '@master/css.vue'
             +import config from './master.css'
             </script>
 
