--- a/website/app/[locale]/(root)/docs/installation/react/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/react/content.mdx
@@ -84,7 +84,7 @@ A full-stack framework, such as [Next.js](/docs/installation/nextjs), [Remix](/d
             import ReactDOM from 'react-dom/client'
             import App from './App'
             import './index.css'
-            +import { CSSRuntimeProvider } from '@master/css.react'
+            +import CSSRuntimeProvider from '@master/css.react'
             +import config from '../master.css'
 
             ReactDOM.createRoot(document.getElementById('root') as HTMLElement).render(
