--- a/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
@@ -99,7 +99,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         <StepR>
             ```svelte name=src/routes/%2Blayout.svelte
                 <script>
-                +    import { CSSRuntimeProvider } from "@master/css.svelte";
+                +    import CSSRuntimeProvider from "@master/css.svelte";
                 +    import config from '../../master.css';
                     import Header from "./Header.svelte";
                     import "./styles.css";
