--- a/website/app/[locale]/(root)/docs/installation/vuejs/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vuejs/content.mdx
@@ -80,7 +80,7 @@ A full-stack framework, such as [Nuxt.js](/docs/installation/nuxtjs), is recomme
         <StepR>
             ```html name=src/App.vue
             <script setup lang="ts">
-            +import { CSSRuntimeProvider } from '@master/css.vue'
+            +import CSSRuntimeProvider from '@master/css.vue'
             +import config from '../master.css'
             </script>
 
