Add delete button styling using bg:red

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -79,6 +79,7 @@ See the [Color Customization](/docs/colors#customization) documentation to learn
 
 ## Use cases
 ### Create a delete button
+Use `mcss bg:red` to create a nice-looking delete button.
 <Demo $py={0}>
     <DemoPanel>
         <div className='text:20 font:semibold fg:strong'>Delete Project</div>
