Update default value for `--example`

--- a/website/app/[locale]/(root)/docs/create/content.mdx
+++ b/website/app/[locale]/(root)/docs/create/content.mdx
@@ -83,7 +83,7 @@ npm create @master/css@rc **--ext ts**
 
 ### `--example`
 Create a Master CSS App using [official examples](https://github.com/master-co/css/tree/rc/examples).
-<DocProp defaultValue="'vite'" types={['string']} />
+<DocProp defaultValue="'blank'" types={['string']} />
 ```bash name=Terminal
 npm create @master/css@rc __project__ **--example react**
 ```
