Add link to Code Linting documentation

--- a/website/app/[locale]/(root)/docs/eslint/content.mdx
+++ b/website/app/[locale]/(root)/docs/eslint/content.mdx
@@ -11,6 +11,7 @@ The extended recommended configuration:
 <Code lang="js">
     {JSON.stringify(require('../../../../../../packages/eslint-plugin/src/configs/recommended').default, null, 4)}
 </Code>
+To learn more about features, check out the [Code Linting](/docs/code-linting).
 
 ---
 
