Add link to Master CSS Styled website

--- a/website/app/[locale]/(root)/docs/migration/styled-components/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/styled-components/content.mdx
@@ -26,3 +26,5 @@ return (
     <Button primary>Submit</Button>
 )
 ```
+
+To learn more, visit the [Master CSS Styled](https://github.com/master-co/styled).
