--- a/website/app/[locale]/(root)/docs/rendering-modes/components/ProgressiveRenderingIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/ProgressiveRenderingIntro.mdx
@@ -11,7 +11,7 @@ Master CSS [Progressive Rendering](/docs/rendering-modes/progressive-rendering) 
             <div>
                 **Faster page loading**
 
-                Non-rendering-blocking internal CSS and lazy loading
+                <p className="text:16">Non-rendering-blocking internal CSS and lazy loading</p>
             </div>
         </Feature>
         <Feature>
@@ -19,7 +19,7 @@ Master CSS [Progressive Rendering](/docs/rendering-modes/progressive-rendering) 
             <div>
                 **Fully automatic**
 
-                Capture any program-generated class names
+                <p className="text:16">Capture any program-generated class names</p>
             </div>
         </Feature>
         <Feature>
@@ -27,7 +27,7 @@ Master CSS [Progressive Rendering](/docs/rendering-modes/progressive-rendering) 
             <div>
                 **CSS encapsulation**
 
-                Only ship the page-used CSS instead of the whole site
+                <p className="text:16">Only ship the page-used CSS instead of the whole site</p>
             </div>
         </Feature>
     </Features>
