--- a/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
@@ -10,24 +10,21 @@ Master CSS [Static Extraction](/docs/rendering-modes/static-extraction) integrat
             <IconFileExport className="app-icon-primary" />
             <div>
                 **Zero runtime**
-
-                Generate virtual CSS modules at build time
+                <p className='text:16'>Generate virtual CSS modules at build time</p>
             </div>
         </Feature>
         <Feature>
             <IconAdjustments className="app-icon-primary" />
             <div>
                 **Semi-dynamic**
-
-                Scan all source code to extract class names
+                <p className='text:16'>Scan all source code to extract class names</p>
             </div>
         </Feature>
         <Feature>
             <IconDatabaseExport className="app-icon-primary" />
             <div>
                 **Cross-page caching**
-
-                Download the CSS bundle for all pages at once
+                <p className='text:16'>Download the CSS bundle for all pages at once</p>
             </div>
         </Feature>
     </Features>
