--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -6,19 +6,13 @@ import version from '~/version';
 ---
 
 ## Release phases
-Now that we're **at the release candidate**, we can more accurately estimate arrival times based on the task at hand:
+We're **at the release candidate**, we can more accurately estimate arrival times based on the task at hand:
 
 - **Master CSS v2.0**
     1. <del>Alpha － 2.0.0-alpha.80</del>
     2. <del>Beta － 2.0.0-beta.215</del>
     3. **Release Candidate** － <svg className="mr:1x inline-block v:middle fill:green size:2x overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg"><circle className="@ping|1s|infinite transform:center" cx="4" cy="4" r="4" /><circle cx="4" cy="4" r="4" /></svg> [{version}](https://github.com/master-co/css/releases)
-    4. Stable － April 2024
-- **Master UI v1.0**
-    1. Alpha - ?
-    2. Beta - ?
-    3. Release Candidate - ?
-    4. Stable － August 2024
-- **Master UI Pro v1.0** － December 2024
+    4. Stable － May 2024
 
 Since the syntax and API of Master CSS are expected to be in use for many years, even though v2 is nearing completion, it will take us some time to validate its market acceptance and solidify its foundation.
 
@@ -26,7 +20,11 @@ At this stage, **Master CSS is nearly stable**, which means there will be no fur
 
 ---
 
-## Current tasks
+## What did we do before?
+距離 Master CSS [v1](https://github.com/master-co/css/releases/tag/v1.0.0) 發布也快兩年，這些日子我們專注於 v2 核心功能的開發，很少發布動態，因此蘊含著許多驚人的功能待正式版一次爆發！
+
+這裡我們究竟做了哪些功能及優化：
+
 ### 🟠 Improving documentation
 Initially, the v1 docs were rushed into release, making its content rather rudimentary and potentially challenging to comprehend.
 
@@ -61,6 +59,10 @@ Redesign the homepage according to the features of v2.
 
 ### 🟢 New Master CSS ESLint
 🎉 Released. Check out the [Code Linting](/docs/code-linting) documentation.
+
+---
+
+## Future
 
 ---
 
