Update responsive design content with new section on using operators

--- a/website/app/[locale]/(root)/docs/responsive-design/content.mdx
+++ b/website/app/[locale]/(root)/docs/responsive-design/content.mdx
@@ -96,7 +96,7 @@ You don't need to waste energy sticking to a specific development strategy; use 
 
 ---
 
-## Basic syntax
+## Using operators
 ### Viewport width is at least N
 To apply styles above a certain viewport width, you can either use the `@N` or `@>=N` operators.
 ```html
