Update configuration content.mdx file

--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -58,7 +58,7 @@ Extend custom or external configuration.
 ```js name=master.css.js
 export default {
     extends: [
-+        require('@master/animate.css'),
++        require('@master/ui'),
 +        require('./styles/btn.css'),
         …
     ]
